# OpenCL_Crash_Course

./: .gitignore  LICENSE  README.md
Examples/: CMakeLists.txt  vcpkg.json
Examples/FloydWarshall/: cl_floyd_warshall.cpp  cl_floyd_warshall.h  cl_util.cpp  cl_util.h  ewd_file.cpp  ewd_file.h  floyd_warshall.cl  main.cpp
Examples/Histogram/: CMakeLists.txt  cl_histogram.cpp  cl_histogram.hpp  histogram.cl  main.cpp
Examples/Simple/: CMakeLists.txt  simple.cl  simple.cpp
Examples/Video/: black_white.cl  cl_video.cpp  cl_video.hpp  glut_win.cpp  glut_win.hpp  main.cpp  painter.cl  video.cl  win_video.cpp  win_video.hpp
Slides/: slides.key
